--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ www_php:
 
 #php 程序 镜像
 php_fpm:
-  image: q84629462/php-with-mongo-extension:5.6.12-fpm-0.2
+  image: ./build/php
   volumes_from:
   - www_php
   links:
@@ -47,7 +47,7 @@ www_nodejs:
 
 #nodejs program file
 nodejs:
-  build: /build/nodejs
+  build: ./build/nodejs
   image: q84629462/node-with-supervisor:latest
   volumes_from:
   - www_nodejs
