--- a/build_image/nodejs_image/Dockerfile
+++ b/build_image/nodejs_image/Dockerfile
@@ -1,4 +1,6 @@
 FROM docker.io/node:latest
 
+MAINTAINER <q84629462> srleo@qq.com
+
 #install golbal plugin 
 RUN npm install -g express mongoose body-parser cookie-parser
