--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,7 +51,7 @@ nodejs:
   volumes_from:
   - www_nodejs
   restart: always
-  command: "node /usr/src/myapp/index.js"
+  command: "node /usr/src/myapp/app.js"
 
 #nginx programe image
 nginx:
