--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,6 +52,9 @@ nodejs:
   - www_nodejs
   restart: always
   command: "node /usr/src/myapp/app.js"
+  links:
+  - mysql_server:mysql
+  - mongodb_server:mongodb
 
 #nginx programe image
 nginx:
