--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,8 @@ www_php:
 
 #php program image
 php_fpm:
-  build: ./build/php
+  #build: ./build/php
+  image: gzlock/php-with-mongodb:latest
   volumes_from:
   - www_php
   links:
@@ -47,7 +48,8 @@ www_nodejs:
 
 #nodejs program image
 nodejs:
-  build: ./build/nodejs
+  #build: ./build/nodejs
+  image: gzlock/node-with-mongoose:latest
   volumes_from:
   - www_nodejs
   restart: always
