--- a/nginx_conf/default.conf
+++ b/nginx_conf/default.conf
@@ -20,7 +20,7 @@ server{
         fastcgi_param PATH_INFO $fastcgi_path_info;
     }
 
-    location /mongo-express{
+    location /mongo_express{
         proxy_pass http://mongo_express:8081/;
     }
     
