--- a/nginx_conf/default.conf
+++ b/nginx_conf/default.conf
@@ -20,8 +20,8 @@ server{
         fastcgi_param PATH_INFO $fastcgi_path_info;
     }
 
-    location /mongo_express{
-        proxy_pass http://mongo_express:8081/;
+    location /mongo-express{
+        proxy_pass http://mongo_express:8081;
     }
     
     location /node{
