--- a/nginx_conf/default.conf
+++ b/nginx_conf/default.conf
@@ -24,7 +24,7 @@ server{
         proxy_pass http://mongo_express:8081;
     }
     
-    location /node{
+    location /data{
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
