--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,7 +68,7 @@ mongo_express:
 
 #nginx programe image
 nginx:
-  image: docker.io/nginx:latest
+  image: docker.io/gzlock/nginx:latest
   volumes:
   - ./nginx_conf:/etc/nginx/conf.d
   volumes_from:
