--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,6 +54,8 @@ nodejs:
   - www_nodejs
   restart: always
   command: "node /usr/src/myapp/app.js"
+  environment:
+  - DEBUG:true
   links:
   - mysql_server:mysql
   - mongodb_server:mongodb
