--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,11 +64,12 @@ nodejs:
 
 #node-with-mongo-express image
 mongo_express:
-  #build: ./build/mongo-express
-  image: gzlock/node-with-mongoexpress:latest
+  image: gzlock/node-with-mongo-express:latest
   restart: always
   links:
-  - mongodb_server:mongo
+  - mongodb_server:mongodb
+  ports:
+  - "8081:8081"
   log_driver: "none"
 
 #nginx programe image
