--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ mysql_data:
 
 #mysql program image
 mysql_server:
+  container_name: gzlock-mysql
   image: docker.io/mysql:latest
   volumes_from:
   - mysql_data
@@ -23,6 +24,7 @@ mongodb_data:
 
 #mongodb program image
 mongodb_server:
+  container_name: gzlock-mongodb
   image: docker.io/mongo:latest
   volumes_from:
   - mongodb_data
