--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,8 @@ mysql_server:
   - MYSQL_ROOT_PASSWORD=DROWSSAP
   log_driver: "json-file"
   log_opt:
-    max-size: "30m"
-    max-file: "1"
+    max-size: "1m"
+    max-file: "5"
 
 #mongodb data image
 mongodb_data:
@@ -33,8 +33,8 @@ mongodb_server:
   - mongodb_data
   log_driver: "json-file"
   log_opt:
-    max-size: "30m"
-    max-file: "1"
+    max-size: "1m"
+    max-file: "5"
 
 #php file image
 www_php: 
@@ -53,8 +53,8 @@ php_fpm:
   - mongodb_server:mongodb
   log_driver: "json-file"
   log_opt:
-    max-size: "30m"
-    max-file: "1"
+    max-size: "1m"
+    max-file: "5"
 
 #nodejs file image
 www_nodejs: 
@@ -73,6 +73,10 @@ nodejs:
   links:
   - mysql_server:mysql
   - mongodb_server:mongodb
+  log_driver: "json-file"
+  log_opt:
+    max-size: "1m"
+    max-file: "5"
 
 #node-with-mongo-express image
 mongo_express:
@@ -84,8 +88,8 @@ mongo_express:
   - "8081:8081"
   log_driver: "json-file"
   log_opt:
-    max-size: "30m"
-    max-file: "1"
+    max-size: "1m"
+    max-file: "5"
 
 #nginx programe image
 nginx:
@@ -103,5 +107,5 @@ nginx:
   - "80:80"
   log_driver: "json-file"
   log_opt:
-    max-size: "30m"
-    max-file: "1"
+    max-size: "1m"
+    max-file: "5"
